--- a/app.wxss
+++ b/app.wxss
@@ -28,6 +28,12 @@
 .common-margin-r{
   margin-right: 15rpx;
 }
+.common-margin-t{
+  margin-top: 30rpx;
+}
+.common-margin-l{
+  margin-left: 30rpx;
+}
 .icon-arrow{
   width: 24rpx;
   height: 24rpx;
@@ -35,4 +41,12 @@
 .auto-image{
   width: 100%;
   height: 100%;
+}
+.footer{
+  height: 100rpx; 
+  width: 750rpx;
+  position: fixed;
+  bottom: 0;
+  box-shadow:0rpx -1rpx 3rpx #E0E0E0;
+  background: #fff
 }
