--- a/pages/more/more.wxml
+++ b/pages/more/more.wxml
@@ -22,6 +22,7 @@
       wx:for="{{imageList}}"
       wx:key="{{index}}"
       class="{{item.class}}"
+      bindtap='handleNavigate'
     >
       <image 
         src='{{item.url}}' 
