--- a/pages/more/more.wxss
+++ b/pages/more/more.wxss
@@ -14,7 +14,7 @@
   line-height: 80rpx;
   text-align: center;
   font-size: 28rpx;
-  margin: 10rpx;
+  margin: 30rpx 10rpx;
   border-bottom: 4rpx solid #fff
 }
 .active{
