--- a/pages/more/more.wxss
+++ b/pages/more/more.wxss
@@ -7,6 +7,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: fixed;
+  left: 0;
+  background: #fff
 }
 .type_item{
   width: 180rpx;
@@ -14,7 +17,7 @@
   line-height: 80rpx;
   text-align: center;
   font-size: 28rpx;
-  margin: 30rpx 10rpx;
+  margin: 15rpx 0rpx 15rpx 20rpx;
   border-bottom: 4rpx solid #fff
 }
 .active{
@@ -24,22 +27,23 @@
 /* 左侧导航结束 */
 /* 右侧展示开始 */
 .right-container{
-  margin-bottom: 30rpx;
+  margin-bottom: 20rpx;
+  margin-left: 200rpx;
   width: 570rpx;
   display: flex;
   flex-wrap: wrap;
   align-content: flex-start;
 }
 .image{
-  margin:30rpx 30rpx 0;
+  margin:20rpx 20rpx 0;
   background-color: #eee;
-  width: 490rpx;
+  width: 510rpx;
   height: 300rpx;
 }
 .second-image{
-  margin:30rpx 0 0 30rpx;
+  margin:20rpx 0 0 20rpx;
   background-color: #eee;
-  width: 240rpx;
+  width: 245rpx;
   height: 300rpx;
 }
 /* 右侧展示结束 */
