--- a/pages/productInfo/productInfo.wxml
+++ b/pages/productInfo/productInfo.wxml
@@ -2,10 +2,10 @@
 <topShow 
   title='全家福其乐融融款'
   price="￥199"
+  url="https://cdn.haimati.cn/V3/Index/Product/more-jhdjz-v3.jpg"
 >
 </topShow>
 <!-- 大图展示结束 -->
-<view style='padding-top:420rpx;'></view>
 <!-- 导航开始 -->
 <view class='navbar fl-r'>
   <view 
